# depmap_omics_upload

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
depmap_omics_upload/: __main__.py  add_new_samples_to_gumbo.py  autoload.py  base.py  cli.py  config.json  config_dev.json  genetic_subtype.py  get_signed_url.py  loading.py  scan_delivery_workspaces.py  tracker.py  upload.py
depmap_omics_upload/gp_delivery_qc/: __main__.py  app.py  gcp_utils.py  gumbo_client_wrapper.py  pydantic_models.py
depmap_omics_upload/mgenepy/: sequencing.py  terra.py
depmap_omics_upload/mgenepy/google/: gcp.py
depmap_omics_upload/mgenepy/utils/: helper.py
mgenepy/: terra.py
mgenepy/google/: gcp.py
mgenepy/utils/: helper.py
tests/: test_base.py
