[tool.poetry]
name = "depmap-omics-upload"
version = "0.1.0"
description = "load, subset, and upload DepMap data"
authors = ["Simone Zhang <xiaomeng@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "depmap_omics_upload"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
