[tool.poetry]
name = "depmap-omics-upload"
version = "0.1.0"
description = "load, subset, and upload DepMap data"
authors = ["Simone Zhang <xiaomeng@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "depmap_omics_upload"}]

[tool.poetry.dependencies]
python = "^3.9"
firecloud-dalmatian = "^0.0.18"
gumbo-client = { git = "https://github.com/broadinstitute/gumbo_client.git", branch = "main" }
tqdm = "^4.66.1"
biomart = "^0.9.2"
taigapy = "^3.3.5"
oauth2client = "^4.1.3"
google-cloud-storage = "^2.14.0"
functions-framework = "^3.5.0"
pydantic = "^2.5.3"
numpy = "^1.26.3"
pandas = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
ipython = "^8.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
