[tool.poetry]
name = "depmap-omics-upload"
version = "0.1.0"
description = "load, subset, and upload DepMap data"
authors = ["Simone Zhang <xiaomeng@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "depmap_omics_upload"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
biomart = "^0.9.2"
firecloud-dalmatian = "^0.0.18"
gumbo-rest-client = {version = "^2.0.4", source = "public-python"}
taigapy = {git = "https://github.com/broadinstitute/taigapy.git", rev = "0b67741f18fe6e3c2f508ee84b06ca3bed853b82"}

[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
